# climate-aware-dc-ops-v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-dev.md  infra-dev.md  pipeline-dev.md  scoring-dev.md  test-writer.md
.claude/hooks/: block-docker-agent.sh  block-env-edit.sh  block-terraform-apply.sh
docs/: agentic-design.md  data-model.md  interfaces.md  risk-scoring.md  source-of-truth.md  status-classification.md
src/cado/: config.py  config.yaml  main.py
src/cado/agents/: __init__.py  zone_intelligence.py
src/cado/api/: routes.py
src/cado/collectors/: __init__.py  cloudwatch_collector.py
src/cado/db/: supabase_client.py
src/cado/pipeline/: __init__.py  aggregator.py  zone_mapper.py
src/cado/scoring/: __init__.py  risk_calculator.py  status_classifier.py
tests/: __init__.py  test_cloudwatch_collector.py  test_cloudwatch_integration.py  test_risk_calculator.py  test_status_classifier.py  test_zone_intelligence.py  test_zone_mapper.py
