[project]
name = "cado-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "boto3>=1.43.46",
    "fastapi>=0.139.0",
    "moto>=5.2.2",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.1",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests that require real AWS resources (excluded by default)",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
